Bug 1285455 - Firebug theme - element-picker button is too tall in Animation Inspector. r=Honza
MozReview-Commit-ID: EDmgDU2vJ3V

UltraBlame original commit: 2f2c863160a58a9a12d31dca5f71e7b281896985

--- a/devtools/client/themes/firebug-theme.css
+++ b/devtools/client/themes/firebug-theme.css
@@ -2083,3 +2083,19 @@ width
 32px
 ;
 }
+.
+theme
+-
+firebug
+#
+element
+-
+picker
+{
+min
+-
+height
+:
+21px
+;
+}
